# GENAI

./: 002nb-trying-different-llm-models.ipynb  006nb-examples.ipynb  crew_execution_log.json  nb006-data-loaders.ipynb  output_task1.txt  pyproject.toml  requirements.txt  test_imports.py  tutorial.js
CrewAI/: 009-build-your-first-crew.ipynb  010-build-your-first-flow.ipynb  018-knowledge-apps.ipynb  020-processes.ipynb  021-collaboration.ipynb  023-memory.ipynb  026-cli.ipynb  027-tools.ipynb  028-event-listeners.ipynb  0301-p1-security-warning.ipynb  0303-p1-google-credentials.ipynb  0304-p1-api-keys.ipynb  0310-p1-experiments.ipynb  0311-p1-fixes-for-installation.ipynb  0314-p1-fixes-in-flow.ipynb  0315-p1-fixes-utils-file.ipynb  0316-p1-fixes-in-agents-yaml.ipynb  063-custom-tool-to-connect-with-trello.ipynb  064-testing-and-training-a-crew.ipynb  070-new-crewai-platform.ipynb  071-after-the-deployment.ipynb  CoreConcepts001-Agents.ipynb  CoreConcepts002-Tasks.ipynb  CoreConcepts003-Crews.ipynb  CoreConcepts004-Flows.ipynb  CoreConcepts005-Knowledge.ipynb  CoreConcepts006-LLMs.ipynb  gpt_tutorial.py  gpttutorialcopy.ipynb  gpttutorialcopy.py
CrewAI/Bootcamp/sales_meeting_preparation/: pyproject.toml
CrewAI/Bootcamp/sales_meeting_preparation/src/sales_meeting_preparation/: crew.py
CrewAI/sdr_assistant_flow/: pyproject.toml
CrewAI/sdr_assistant_flow/src/sdr_assistant_flow/: lead_types.py
CrewAI/sdr_assistant_flow/src/sdr_assistant_flow/crews/draft_cold_email_crew/config/: agents.yaml  tasks.yaml
Cursor/: Cursor001-cursor-installation.ipynb
LangChain/: nb009-embeddings.ipynb  nb010-vector-stores.ipynb  nb020-builtin-functions-runnable.ipynb  (+4 more)
Poetry/mi_proyecto_demo/mi_proyecto_demo/: pyproject.toml
Poetry/mi_proyecto_demo/mi_proyecto_demo/env/: pyproject.toml
(+168 files in other folders)
