[project]
name = "sdr_assistant_flow"
version = "0.1.0"
description = "sdr_assistant_flow using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = "==3.12.2"
dependencies = [
    "crewai[tools]>=0.114.0,<1.0.0",
]

[project.scripts]
kickoff = "sdr_assistant_flow.main:kickoff"
run_crew = "sdr_assistant_flow.main:kickoff"
plot = "sdr_assistant_flow.main:plot"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "flow"
